# luma-weaver

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  Dockerfile  README.md  book.toml  config.yaml  docker-compose.yml  repository.yaml  run.sh
.devcontainer/: post-create.sh
.github/: release.yml
.github/workflows/: ci.yml  publish-addon.yml  publish-frontend-demo.yml  publish-pages.yml  release-preflight.yml
crates/backend/: Cargo.toml
crates/backend/src/: demo.rs  lib.rs  main.rs  platform_time.rs  spatial_layout.rs
crates/backend/src/api/: http.rs  mod.rs
crates/backend/src/api/websocket/: handler.rs  mod.rs  outbound.rs  routing.rs
crates/backend/src/api/websocket/routing/: diagnostics.rs  graphs.rs  integrations.rs  runtime.rs  session.rs
crates/backend/src/app/: mod.rs  startup.rs  state.rs
crates/backend/src/color_math/: hsv.rs  mod.rs
crates/backend/src/messaging/: event_bus.rs  mod.rs
crates/backend/src/node_runtime/: construction.rs  context.rs  conversions.rs  diagnostics.rs  macros.rs  mod.rs  parameters.rs  registry.rs  tensor.rs  traits.rs
crates/backend/src/node_runtime/nodes/: filter_utils.rs  mod.rs
crates/backend/src/node_runtime/nodes/color/: box_blur.rs  frame_brightness.rs  gaussian_blur.rs  level_bar.rs  mask_frame.rs  mod.rs  moving_average.rs  multiply_color.rs  rainbow_sweep.rs  solid_frame.rs  twinkle_stars.rs
crates/backend/src/node_runtime/nodes/core/: color_constant.rs  display.rs  float_constant.rs  mod.rs  plot.rs  sinus.rs
crates/backend/src/node_runtime/nodes/debug/: mod.rs  type_debug.rs  wled_dummy_display.rs
crates/backend/src/node_runtime/nodes/frame_operations/: alpha_over.rs  colorize.rs  extract_channels.rs  fade.rs  fill_from_frame.rs  frame_brightness.rs  map_to_layout.rs  mask_frame.rs  mix_color.rs  mod.rs  scale_color.rs  set_channel.rs  tint_frame.rs  transform.rs
crates/backend/src/node_runtime/nodes/generators/: bouncing_balls.rs  circle_sweep.rs  level_bar.rs  mod.rs  plasma.rs  rainbow_sweep.rs  solid_frame.rs  spectrum_analyzer.rs  twinkle_stars.rs
crates/backend/src/node_runtime/nodes/inputs/: audio_fft_receiver.rs  ha_mqtt_number.rs  image_source.rs  mod.rs  signal_generator.rs  wled_sink.rs
crates/backend/src/node_runtime/nodes/math/: abs.rs  abs_float.rs  add.rs  add_float.rs  binary_select.rs  clamp.rs  clamp_float.rs  divide.rs  divide_float.rs  exponential.rs  exponential_float.rs  log.rs  log_float.rs  map_range.rs  map_range_float.rs  min_max.rs  min_max_float.rs  mod.rs  multiply.rs  multiply_float.rs  power.rs  power_float.rs  root.rs  root_float.rs  round.rs  round_float.rs  scale_tensor.rs  subtract.rs  subtract_float.rs
crates/backend/src/node_runtime/nodes/net/: ha_mqtt_number.rs  mod.rs  wled_sink.rs  wled_target.rs
crates/backend/src/node_runtime/nodes/outputs/: display.rs  mod.rs  wled_target.rs
crates/backend/src/node_runtime/nodes/spatial_filters/: box_blur.rs  gaussian_blur.rs  laplacian_filter.rs  median_filter.rs  mod.rs
crates/backend/src/node_runtime/nodes/temporal_filters/: delay.rs  differentiate.rs  fade.rs  integrate.rs  mod.rs  moving_average.rs  moving_median.rs
crates/backend/src/node_runtime/shared/: mod.rs
crates/backend/src/services/: image_asset_store.rs  image_codec.rs  layout_asset_store.rs  mod.rs
crates/backend/src/services/graph_store/: mod.rs
crates/backend/src/services/mqtt/: mod.rs
crates/backend/src/services/mqtt_broker_store/: mod.rs
crates/backend/src/services/runtime/: compiler.rs  executor.rs  manager.rs  mod.rs  planner.rs  types.rs
crates/backend/src/services/wled/: ddp.rs  discovery.rs  mod.rs
crates/frontend/: 404.html  Cargo.toml  Trunk.toml  index.html
crates/frontend/src/: app.rs  browser_file.rs  dashboard_view.rs  diagnostics_view.rs  editor_view.rs  header_view.rs  lib.rs  state.rs  transport.rs  websocket_client.rs
crates/frontend/src/app/: asset_uploads.rs  clipboard.rs  graph_actions.rs  history.rs  image_assets.rs  import_export.rs  messaging.rs  navigation.rs  server_state.rs
crates/frontend/src/controllers/: autosave.rs  connection.rs  messages.rs  mod.rs  subscriptions.rs
crates/frontend/src/editor_view/: model.rs  viewer.rs  widgets.rs
crates/shared/: Cargo.toml
docs/: SUMMARY.md  index.md
docs-book/: book.toml
docs/developer/: architecture.md  backend-objects.md  contributing.md  node-authoring.md  protocol-runtime.md  runtime-execution.md  workflows.md
docs/user/: README.md  (+7 more)
examples/: Example.animation-graph.json  PDE_Heat_Wave.animation-graph.json
translations/: en.yaml
(+12 files in other folders)
