[workspace]
members = ["crates/backend", "crates/frontend", "crates/shared"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.33"
futures-channel = "0.3"
futures-util = { version = "0.3", features = ["sink", "channel"] }
gloo-net = "0.6"
http = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
palette = { version = "0.7", default-features = false, features = ["std"] }
tokio = { version = "1.44", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-wasm = "0.2"
uuid = { version = "1.18", features = ["v4"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
