[package]
name = "backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
tracing.workspace = true
palette.workspace = true
libblur = "0.23"
futures-channel.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js"] }
web-time.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum.workspace = true
flume = "0.11"
futures-util.workspace = true
http.workspace = true
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
mdns-sd = "0.13"
resvg = "0.47"
rumqttc = "0.24"
socket2 = "0.5"
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
