[package]
name = "frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
eframe.workspace = true
egui.workspace = true
egui-snarl = "0.9"
futures-channel.workspace = true
futures-util.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
tracing.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
gloo-net.workspace = true
js-sys = "0.3"
tracing-wasm.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
web-sys = { workspace = true, features = ["Blob", "Document", "Event", "File", "FileList", "FileReader", "History", "HtmlAnchorElement", "HtmlCanvasElement", "HtmlInputElement", "Location", "Url", "Window"] }
