[package]
name = "frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
demo-mode = ["dep:backend"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
backend = { path = "../backend", optional = true }
eframe.workspace = true
egui.workspace = true
egui-snarl = "0.9"
futures-channel.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
tracing.workspace = true
uuid = { workspace = true, features = ["js", "v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
gloo-net.workspace = true
js-sys = "0.3"
tracing-wasm.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
web-sys = { workspace = true, features = ["Blob", "Clipboard", "Document", "Event", "File", "FileList", "FileReader", "Headers", "History", "HtmlAnchorElement", "HtmlCanvasElement", "HtmlInputElement", "Location", "Navigator", "Request", "RequestInit", "Response", "Url", "Window"] }
